# abstract-data-structures

./: .cspell.json  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  dbms  diagrams.puml
benchmarks/: a.ArrayBenchmark.cpp  b.SLListBenchmark.cpp  c.DLListBenchmark.cpp  d.StackBenchmark.cpp  e.QueueBenchmark.cpp  f.CBTreeBenchmark.cpp
data/: Adata.txt  Bdata.txt  Cdata.txt  Ddata.txt  Edata.txt
src/: main.cpp
src/Node/: DoublyNode.hpp  Node.hpp  TreeNode.hpp
src/Node/NodesForTree/: QueueNode.hpp  TreeNode.hpp
src/UI/: ConsoleUI.cpp  ConsoleUI.hpp  loadData.cpp  loadData.tpp  processQuery.cpp  processQuery.tpp  saveData.cpp  saveData.tpp
src/a.Array/: a.Array.cpp  a.Array.hpp  a.Array.tpp  a.loadFromFile.cpp  a.loadFromFile.tpp  a.resize.tpp  a.saveToFile.cpp  a.saveToFile.tpp  a1.addToTheEnd.cpp  a1.addToTheEnd.tpp  a10.loadFromBinaryFile.tpp  a11.saveToBinaryFile.tpp  a2.addToTheIndex.cpp  a2.addToTheIndex.tpp  a3.get.cpp  a3.get.tpp  a4.removeByIndex.cpp  a4.removeByIndex.tpp  a5.replaceByIndex.cpp  a5.replaceByIndex.tpp  a6.length.cpp  a6.length.tpp  a7.print.cpp  a7.print.tpp  a8.loadFromFile.tpp  a9.saveToFile.tpp
src/b.SinglyLinkedList/: b.Node.hpp  b.SinglyLinkedList.cpp  b.SinglyLinkedList.hpp  b.SinglyLinkedList.tpp  b.loadFromFile.cpp  b.saveToFile.cpp  b1.addToHead.cpp  b1.addToHead.tpp  b10.removeByValue.tpp  b11.print.tpp  b12.loadFromFile.tpp  b13.saveToFile.tpp  b14.loadFromBinaryFile.tpp  b15.saveToBinaryFile.tpp  b2.addToTail.cpp  b2.addToTail.tpp  b3.removeFromHead.cpp  b3.removeFromHead.tpp  b3.removeHead.cpp  b4.removeFromTail.cpp  b4.removeFromTail.tpp  b4.removeTail.cpp  b5.insertBefore.tpp  b6.insertAfter.tpp  b7.removeBefore.tpp  b8.removeAfter.tpp  b9.searchByValue.tpp
src/c.DoublyLinkedList/: c.DoublyLinkedList.cpp  c.DoublyLinkedList.hpp  c.DoublyLinkedList.tpp  c.Node.hpp  c.loadFromFile.cpp  c.loadFromFile.tpp  c.saveToFile.cpp  c.saveToFile.tpp  c1.addToHead.cpp  c1.addToHead.tpp  c10.removeByValue.tpp  c11.print.tpp  c12.loadFromFile.tpp  c13.saveToFile.tpp  c14.loadFromBinaryFile.tpp  c15.saveToBinaryFile.tpp  c2.addToTail.cpp  c2.addToTail.tpp  c3.removeFromHead.cpp  c3.removeFromHead.tpp  c3.removeHead.cpp  c4.removeFromTail.cpp  c4.removeFromTail.tpp  c4.removeTail.cpp  c5.insertBefore.tpp  c6.insertAfter.tpp  c7.removeBefore.tpp  c8.removeAfter.tpp  c9.searchByValue.tpp
src/d.Stack/: d.Stack.cpp  d.Stack.hpp  d.Stack.tpp  d.loadFromFile.cpp  d.loadFromFile.tpp  d.saveToFile.cpp  d.saveToFile.tpp  d1.push.cpp  d1.push.tpp  d2.pop.cpp  d2.pop.tpp  d3.print.cpp  d3.print.tpp  d4.loadFromFile.tpp  d5.saveToFile.tpp  d6.loadFromBinaryFile.tpp  d7.saveToBinaryFile.tpp
src/e.Queue/: e.Queue.cpp  e.Queue.hpp  e.Queue.tpp  e.front.tpp  e.isEmpty.tpp  e.loadFromFile.cpp  e.loadFromFile.tpp  e.saveToFile.cpp  e1.push.cpp  e1.push.tpp  e2.pop.cpp  e2.pop.tpp  e3.print.cpp  e3.print.tpp  e4.loadFromFile.tpp  e5.saveToFile.tpp  e6.loadFromBinaryFile.tpp  e7.saveToBinaryFile.tpp
src/f.CompleteBinaryTree/: f.CBTree.hpp  f.CBTree.tpp  f.clear.tpp  f.loadFromFile.tpp  f.saveToFile.tpp  f1.insert.tpp  f2.findValue.tpp  f3.isCBT.tpp  f4.print.tpp  f5.loadFromFile.tpp  f6.saveToFile.tpp  f7.loadFromBinaryFile.tpp  f8.saveToBinaryFile.tpp
test/: a.ArrayTest.cpp  b.SLListTest.cpp  c.DLListTest.cpp  d.StackTest.cpp  e.QueueTest.cpp  f.CBTreeTest.cpp
